feat: enhance UI with header structure and IPFS propagation notice in batch and single share pages

--- a/batch-share.html
+++ b/batch-share.html
@@ -21,8 +21,11 @@
 <body>
     <div class="batch-share-container">
         <div class="batch-share-header">
-            <img src="/img/ipfsbed.png" alt="IPFSBED Logo" width="32" height="32">
-            <h1 id="batchShareHeaderTitle">IPFSBED</h1>
+            <div class="batch-share-header-top">
+                <img src="/img/ipfsbed.png" alt="IPFSBED Logo" width="32" height="32">
+                <h1 id="batchShareHeaderTitle">IPFSBED</h1>
+            </div>
+            <p class="ipfs-notice" data-translate="ipfs-propagation-notice">如果文件刚上传，请稍等片刻再下载，IPFS网络需要时间传播</p>
         </div>
         
         <div class="batch-share-content">
