--- a/share.html
+++ b/share.html
@@ -21,8 +21,11 @@
 <body>
     <div class="share-container">
         <div class="share-header">
-            <img src="/img/ipfsbed.png" alt="IPFSBED Logo" width="28" height="28">
-            <h1 id="shareHeaderTitle">IPFSBED</h1>
+            <div class="share-header-top">
+                <img src="/img/ipfsbed.png" alt="IPFSBED Logo" width="28" height="28">
+                <h1 id="shareHeaderTitle">IPFSBED</h1>
+            </div>
+            <p class="ipfs-notice" data-translate="ipfs-propagation-notice">如果文件刚上传，请稍等片刻再下载，IPFS网络需要时间传播</p>
         </div>
         
         <div class="share-content">
